Track WASM crashing
 - Once Rust panics, throw an error if users try to call top level Zaplib functions
 - Stop mouse/keyboard events after a crash

--- a/zaplib/test_suite/index.html
+++ b/zaplib/test_suite/index.html
@@ -20,8 +20,13 @@ You may not use this file except in compliance with the License.
 </head>
 
 <body style="color: white">
-    <div id="root" style="margin-top: 40px; margin-left: 20px">
-        <div style="color: yellow">Zaplib Test Suite</div>
+    <div style="margin-top: 40px; margin-left: 20px; display: flex">
+        <div id="root">
+            <div style="color: yellow">Zaplib Test Suite</div>
+        </div>
+        <div id="other-tests">
+            <div style="color: yellow">Other Tests (Not run in entire test suite)</div>
+        </div>
     </div>
 </body>
 
