--- a/zaplib/examples/tutorial_ui_components/index.html
+++ b/zaplib/examples/tutorial_ui_components/index.html
@@ -4,6 +4,6 @@
 <body>
     <script type="text/javascript" src="/zaplib/web/dist/zaplib_runtime.js"></script>
     <script type="text/javascript">
-        zaplib.initialize({ filename: `target/wasm32-unknown-unknown/debug/tutorial_ui_components.wasm`, defaultStyles: true });
+        zaplib.initialize({ wasmModule: `target/wasm32-unknown-unknown/debug/tutorial_ui_components.wasm`, defaultStyles: true });
     </script>
 </body>
