--- a/zaplib/examples/tutorial_hello_world_canvas/index.html
+++ b/zaplib/examples/tutorial_hello_world_canvas/index.html
@@ -5,7 +5,7 @@
     <script type="text/javascript" src="/zaplib/web/dist/zaplib_runtime.js"></script>
     <script>
         zaplib.initialize({
-            filename: 'target/wasm32-unknown-unknown/debug/tutorial_hello_world_canvas.wasm',
+            wasmModule: 'target/wasm32-unknown-unknown/debug/tutorial_hello_world_canvas.wasm',
             defaultStyles: true,
         });
     </script>
