install yarn and build in command

--- a/zaplib/examples/tutorial_hello_world_console/index.html
+++ b/zaplib/examples/tutorial_hello_world_console/index.html
@@ -5,8 +5,7 @@
     <script type="text/javascript" src="/zaplib/web/dist/zaplib_runtime.js"></script>
     <script>
         zaplib.initialize({
-            filename: 'target/wasm32-unknown-unknown/debug/tutorial_hello_world_console.wasm',
-            defaultStyles: true,
+            wasmModule: 'target/wasm32-unknown-unknown/debug/tutorial_hello_world_console.wasm'
         });
     </script>
 </body>
