--- a/zaplib/examples/example_lightning/index.html
+++ b/zaplib/examples/example_lightning/index.html
@@ -7,18 +7,20 @@ found in the LICENSE-APACHE file in the root directory of this source tree.
 You may not use this file except in compliance with the License.
 -->
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="Cache-Control" content="no-cache">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-        <meta name="apple-mobile-web-app-capable" content="yes">
-        <meta name="mobile-web-app-capable" content="yes">
-        <title>Example</title>
-        <script type="text/javascript" src="/zaplib/web/dist/zaplib_runtime.js"></script>
-        <script type="text/javascript">
-            const env = new URL(window.document.location).searchParams.has("release") ? "release" : "debug";
-            zaplib.initialize({ wasmModule: `target/wasm32-unknown-unknown/${env}/example_lightning.wasm`, defaultStyles: true });
-        </script>
-    </head>
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="Cache-Control" content="no-cache">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
+    <title>Example</title>
+    <script type="text/javascript" src="/zaplib/web/dist/zaplib_runtime.development.js"></script>
+    <script type="text/javascript">
+        const env = new URL(window.document.location).searchParams.has("release") ? "release" : "debug";
+        zaplib.initialize({ wasmModule: `target/wasm32-unknown-unknown/${env}/example_lightning.wasm`, defaultStyles: true });
+    </script>
+</head>
+
 </html>
