--- a/zaplib/examples/tutorial_2d_rendering/step3/index.html
+++ b/zaplib/examples/tutorial_2d_rendering/step3/index.html
@@ -1,8 +1,9 @@
 <head>
     <meta charset="utf-8" />
 </head>
+
 <body>
-    <script type="text/javascript" src="/zaplib/web/dist/zaplib_runtime.js"></script>
+    <script type="text/javascript" src="/zaplib/web/dist/zaplib_runtime.development.js"></script>
     <script type="text/javascript">
         zaplib.initialize({ wasmModule: `target/wasm32-unknown-unknown/debug/tutorial_2d_rendering_step3.wasm`, defaultStyles: true });
     </script>
