--- a/zaplib/examples/tutorial_3d_rendering/step2/index.html
+++ b/zaplib/examples/tutorial_3d_rendering/step2/index.html
@@ -1,8 +1,9 @@
 <head>
     <meta charset="utf-8" />
 </head>
+
 <body>
-    <script type="text/javascript" src="/zaplib/web/dist/zaplib_runtime.js"></script>
+    <script type="text/javascript" src="/zaplib/web/dist/zaplib_runtime.development.js"></script>
     <script type="module" src="index.js"></script>
     <div id="root" style="height: 100%; width: 100%;"></div>
 </body>
