--- a/zaplib/examples/tutorial_3d_rendering/step3/index.html
+++ b/zaplib/examples/tutorial_3d_rendering/step3/index.html
@@ -1,7 +1,8 @@
 <head>
     <meta charset="utf-8" />
 </head>
+
 <body>
-    <script type="text/javascript" src="/zaplib/web/dist/zaplib_runtime.js"></script>
+    <script type="text/javascript" src="/zaplib/web/dist/zaplib_runtime.development.js"></script>
     <script type="module" src="index.js"></script>
 </body>
