--- a/zaplib/examples/tutorial_hello_world_console/index.html
+++ b/zaplib/examples/tutorial_hello_world_console/index.html
@@ -1,8 +1,9 @@
 <head>
     <meta charset="utf-8" />
 </head>
+
 <body>
-    <script type="text/javascript" src="/zaplib/web/dist/zaplib_runtime.js"></script>
+    <script type="text/javascript" src="/zaplib/web/dist/zaplib_runtime.development.js"></script>
     <script>
         zaplib.initialize({
             wasmModule: 'target/wasm32-unknown-unknown/debug/tutorial_hello_world_console.wasm'
