--- a/zaplib/examples/tutorial_js_rust_bridge/index.html
+++ b/zaplib/examples/tutorial_js_rust_bridge/index.html
@@ -1,10 +1,13 @@
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <script type="text/javascript" src="/zaplib/web/dist/zaplib_runtime.js"></script>
-        <script type="text/javascript" src="index.js"></script>
-    </head>
-    <body>
-      <div id="root"></div>
-   </body>
+
+<head>
+    <meta charset="utf-8" />
+    <script type="text/javascript" src="/zaplib/web/dist/zaplib_runtime.development.js"></script>
+    <script type="text/javascript" src="index.js"></script>
+</head>
+
+<body>
+    <div id="root"></div>
+</body>
+
 </html>
