--- a/zaplib/web/test_suite/index.html
+++ b/zaplib/web/test_suite/index.html
@@ -16,7 +16,7 @@ You may not use this file except in compliance with the License.
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
     <title>Example</title>
-    <script type="text/javascript" src="/zaplib/web/dist/test_suite.js"></script>
+    <script type="text/javascript" src="/zaplib/web/dist/test_suite.development.js"></script>
 </head>
 
 <body style="color: white">
