--- a/zaplib/examples/tutorial_3d_rendering/step2/index.html
+++ b/zaplib/examples/tutorial_3d_rendering/step2/index.html
@@ -2,7 +2,7 @@
     <meta charset="utf-8" />
 </head>
 
-<body style="margin: 0">
+<body style="margin: 0; overflow:hidden;">
     <script type="text/javascript" src="/zaplib/web/dist/zaplib_runtime.development.js"></script>
     <script type="module" src="index.js"></script>
     <div id="root" style="height: 100%; width: 100%;"></div>
