--- a/zaplib/examples/benchmark_json/index.html
+++ b/zaplib/examples/benchmark_json/index.html
@@ -27,10 +27,10 @@
 <body style="margin: 0; overflow: hidden">
   <h1><a href="https://zaplib.com">Zaplib</a> (rust/wasm) vs JS: 100mb JSON parsing</h1>
   <p>
-    This benchmark was adapted from <a href="https://github.com/kostya/benchmarks#json">kostya/benchmarks</a>, but adapted to work for JS (web) vs Zaplib (rust/wasm).
+    This benchmark was adapted from <a href="https://github.com/kostya/benchmarks#json">kostya/benchmarks</a> to work for JS (web) vs Zaplib (rust/wasm).
   </p>
   <p>
-    To re-generate the json file locally, run the generate_json.rb file in this directory.
+    To re-generate the json file locally, run the <code>generate_json.rb</code> file in this directory.
   </p>
   <p>
     It would be interesting augment the Rust benchmark with a simd-powered parsing library, but I wasn't able to get one to compile on my M1 mac... yet!
