-webkit-background-clip

--- a/zaplib/website_root/index.html
+++ b/zaplib/website_root/index.html
@@ -39,7 +39,7 @@
       <div style="display: flex; flex-direction: column; margin-top: 30px;">
         <div style="display: flex; flex-direction: column;">
           <div style="font-size: xx-large;"> 
-            Port your slow JavaScript to Rust, <em style="background: linear-gradient(90deg, rgba(14,36,0,1) 0%, rgba(1,107,161,1) 0%, rgba(48,199,198,1) 87%); background-clip: text; -webkit-text-fill-color: transparent; padding-right: 1px;">incrementally</em>
+            Port your slow JavaScript to Rust, <em style="background: linear-gradient(90deg, rgba(14,36,0,1) 0%, rgba(1,107,161,1) 0%, rgba(48,199,198,1) 87%); -webkit-background-clip: text; background-clip: text; -webkit-text-fill-color: transparent; padding-right: 1px;">incrementally</em>
           </div>
           <div style="margin-top: 15px; line-height: 1.7;">
             Zaplib is a frontend framework that lets you rewrite the slow pieces of
