add plausible to homepage

--- a/zaplib/website_root/index.html
+++ b/zaplib/website_root/index.html
@@ -24,8 +24,8 @@
         line-height: 1.7;
       }
     </style>
+    <script defer data-domain="zaplib.com" src="https://plausible.io/js/plausible.js"></script>
   </head>
-
   <body>
     <div style="display: flex; flex-direction: column; max-width: 750px; padding: 20px; margin: auto;">
       <div style="display: flex; justify-content: space-between;">
