small, unrelated href fixes

--- a/zaplib/website_root/index.html
+++ b/zaplib/website_root/index.html
@@ -31,8 +31,8 @@
       <div style="display: flex; justify-content: space-between;">
         <div style="font-size:x-large;">⚡️ Zaplib</div>
         <div style="font-size: medium;">
-          <a style="margin-left: 8px; margin-right: 8px;" href="http://zaplib.com/docs">Docs</a>
-          <a style="margin-left: 8px; margin-right: 8px;" href="http://zaplib.com/slack.html">Slack</a>
+          <a style="margin-left: 8px; margin-right: 8px;" href="/docs">Docs</a>
+          <a style="margin-left: 8px; margin-right: 8px;" href="/slack.html">Slack</a>
           <a style="margin-left: 8px; margin-right: 8px;" href="https://github.com/Zaplib/zaplib">Github</a>
           <a style="margin-left: 8px; margin-right: 8px;" href="https://tinyletter.com/zaplib">Mailing list</a>
         </div>
