--- a/zaplib/examples/tutorial_2d_rendering/step1/index.html
+++ b/zaplib/examples/tutorial_2d_rendering/step1/index.html
@@ -5,6 +5,6 @@
 <body>
     <script type="text/javascript" src="/zaplib/web/dist/zaplib_runtime.development.js"></script>
     <script type="text/javascript">
-        zaplib.initialize({ wasmModule: `target/wasm32-unknown-unknown/debug/tutorial_2d_rendering_step1.wasm`, defaultStyles: true });
+        zaplib.initialize({ wasmModule: `target/wasm32-unknown-unknown/debug/tutorial_2d_rendering_step1.wasm`, defaultStyles: true, createTextArea: false });
     </script>
 </body>
