--- a/zaplib/examples/test_multithread/index.html
+++ b/zaplib/examples/test_multithread/index.html
@@ -12,7 +12,7 @@
     <script type="text/javascript" src="/zaplib/web/dist/zaplib_runtime.development.js"></script>
     <script type="text/javascript">
         const env = new URL(window.document.location).searchParams.has("release") ? "release" : "debug";
-        zaplib.initialize({ wasmModule: `target/wasm32-unknown-unknown/${env}/test_multithread.wasm`, defaultStyles: true });
+        zaplib.initialize({ wasmModule: `target/wasm32-unknown-unknown/${env}/test_multithread.wasm`, defaultStyles: true, createTextArea: false });
     </script>
 </head>
 
