--- a/zaplib/examples/tutorial_hello_thread/index.html
+++ b/zaplib/examples/tutorial_hello_thread/index.html
@@ -8,6 +8,7 @@
         zaplib.initialize({
             wasmModule: 'target/wasm32-unknown-unknown/debug/tutorial_hello_thread.wasm',
             defaultStyles: true,
+            createTextArea: false,
         });
     </script>
 </body>
